--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>$WOODS</title>
+  <title>$SHERIFF</title>
   <meta name="description" content="Built quiet. Built to last." />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -22,14 +22,14 @@
       <div class="authority-layer">
         <div class="seal-emblem"></div>
         <div class="seal-label">
-          <span class="seal-label-text">EST. 2026 • MAYBERRY</span>
+          <span class="seal-label-text">EST. 2026 • Mayberry</span>
         </div>
       </div>
       
       <!-- Layer 3: The Asset (Token Certificate) -->
       <div class="asset-layer">
         <div class="certificate">
-          <h1 class="token-name">$WOODS</h1>
+          <h1 class="token-name">$SHERIFF</h1>
         </div>
       </div>
       
