--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="detail-item">
           <span class="detail-label">Ticker</span>
-          <span class="detail-value">$WOODS</span>
+          <span class="detail-value">$SHERIFF</span>
         </div>
         <div class="detail-item">
           <span class="detail-label">Philosophy</span>
